--- a/assets/css/custom.sass
+++ b/assets/css/custom.sass
@@ -13,3 +13,15 @@ HEADER
 
 .english
     font-size: 0.9em
+
+
+.container
+    margin: 10px auto
+    max-width: 600px
+    text-align: center
+
+    h1
+        margin: 30px 0
+        font-size: 4em
+        line-height: 1
+        letter-spacing: -1px
