--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -21,7 +21,7 @@
 </head>
 <body>
 <header class="page-header" role="banner">
-    <h1 class="project-name"><a href="{{ site.url }}">{{ site.title }}</a></h1>
+    <h1 class="project-name"><a href="{{ site.url }}{{ site.baseurl }}">{{ site.title }}</a></h1>
     <h2 class="project-tagline">{{ site.description }}</h2>
     <h5 class="project-tagline english">{{ site.description_en }}</h5>
     {% if site.github.is_project_page %}
